# atenea-code-context-engine-cli

./: .gitignore  Makefile  README.md  install.py  pyproject.toml  setup.py
atenea/: cli.py  config.py  constants.py  http_client.py  logging_config.py  mcp_server.py  scanner.py  ui.py  utils.py
