[project]
name = "atenea-cli"
version = "0.1.0"
description = "Atenea Context Engine - CLI Client & MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=0.1.0",
    "httpx>=0.27.0",
    "tqdm>=4.66.0",
    "watchdog>=4.0.0",
]

[project.scripts]
atenea = "atenea.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["atenea*"]
